--- a/package.json
+++ b/package.json
@@ -30,11 +30,9 @@
     "@nestjs/websockets": "^11.1.5",
     "@prisma/client": "^6.12.0",
     "bcrypt": "^6.0.0",
+    "chalk": "^5.4.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
-    "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
-    "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
